# renovate-poetry-docker

./: README.md  renovate.json5
.github/: pull_request_template.md
.github/workflows/: renovate.yml
docker/mock/: Dockerfile  pyproject.toml
docker/test/: Dockerfile
