[tool.poetry]
name = "my-playwright"
version = "0.1.0"
packages = []
description = "..."
authors = ["test <dev@test.co>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.3.3"
python-dateutil = "^2.8.2"
dataclass-wizard = "^0.22.1"
pytest-asyncio = "^0.21.0"
pytest-rerunfailures = "^10.2"
django = "^3.2.7"
allure-pytest = "^2.13.2"
retry = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
